lib/tests/fixtures/compiler/evaluation/new_invalid_param_struct.pp
notice Struct[{foo => String, bar => Integer}]([foo, bar, bar, baz])
